src/App.css
* {
  margin: 0;
  padding: 0;
  box-sizing: border-box;
}

body {
  width: 100vw;
  height: 100%;
  background-image: linear-gradient(yellow 0%, yellow 60%, black 90%, black 100%);
}

#root {
  display: flex;
  flex-direction: column;
  margin: 0;
  padding: 1rem;
  text-align: center;
  width: 100%;
  height: 100%;
  max-width: 100vw;
}

.logo {
  height: 6em;
  padding: 1.5em;
  will-change: filter;
  transition: filter 300ms;
}
.logo:hover {
  filter: drop-shadow(0 0 2em #646cffaa);
}
.logo.react:hover {
  filter: drop-shadow(0 0 2em #61dafbaa);
}

@keyframes logo-spin {
  from {
    transform: rotate(0deg);
  }
  to {
    transform: rotate(360deg);
  }
}

@media (prefers-reduced-motion: no-preference) {
  a:nth-of-type(2) .logo {
    animation: logo-spin infinite 20s linear;
  }
}

.read-the-docs {
  color: #888;
}

.card {
  aspect-ratio: 14/16;
  background-color: #b3a125;
  border-radius: 20px;

  @media (min-width: 1024px) {
    display: flex;
    flex-direction: column;
    min-width: 10rem;
    max-width: 15rem;
    flex: 1 1 auto;
    box-sizing: border-box;
    margin: 0;
    align-content: center;
    transition: width .1s, height .1s;
    overflow: hidden;
    font-size: 85%;
  }
}

.card:hover {
  @media (min-width: 1024px) {
    aspect-ratio: 13/16;
    box-shadow: 0 0 20px -7px red;
    width: 100.5%;
  }
}

.card-picture {
  height: 70%;
  width: 100%;
  box-sizing: border-box;
  justify-content: center;
}

.card-picture img {
  width: 100%;
}

.card-name {
  @media (max-width: 1023px) {
    font-size: .5rem;
  }
}

img {
  height: 100%;
}

#game-board {
  @media (min-width: 1024px) {
    height: 80vh;
    max-height: calc(100vh - 8rem);
    min-height: 30rem;
    width: 100%;
    display: grid;
    grid-template-rows: repeat(2, minmax(0, 1fr));
    grid-template-columns: repeat(6, minmax(0, 1fr));
    gap: 1vh 1vw;
    padding: 1vh 1vw;
    box-sizing: border-box;
    overflow: hidden;
  }

  @media (max-width: 1023px) {
    display: flex;
    flex-wrap: wrap;
    gap: .5rem;
    height: fit-content;
    margin-top: 1rem;
  }
}

h1 {
  margin-bottom: 1rem;
  color: #ff0000;
  -webkit-text-stroke: 3px black;
  paint-order: stroke fill;
}

.header {
  display: flex;
  color: black;

  @media (min-width: 1024px) {
    
    justify-content: space-between;
    font-size: 1.2rem;
    margin-bottom: 1rem;
  }

  @media (max-width: 1023px) {
    flex-direction: column;
  }
}

.score-board {
  display: flex;

  @media (min-width: 1024px) {
    
    flex-direction: column;
    align-items: end;
  }

  @media (max-width: 1023px) {
    justify-content: space-between;
  }
}

